--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.7.1",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
